--- a/Notebook/EDA_on_Bank_problem_statement.ipynb
+++ b/Notebook/EDA_on_Bank_problem_statement.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Problem Statement\n",
     "\n",
-    "### Business Use Case\n",
+    "### Bank Business Use Case\n",
     "\n",
     "There has been a revenue decline for a Portuguese bank and they would like to know what actions to take. After investigation, they found out that the root cause is that their clients are not depositing as frequently as before. Knowing that term deposits allow banks to hold onto a deposit for a specific amount of time, so banks can invest in higher gain financial products to make a profit. In addition, banks also hold better chance to persuade term deposit clients into buying other products such as funds or insurance to further increase their revenues. As a result, the Portuguese bank would like to identify existing clients that have higher chance to subscribe for a term deposit and focus marketing efforts on such clients.\n",
     "\n",
